kube/akc.yaml
apiVersion: v1
kind: Service
metadata:
  name: akc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: akc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akc
spec:
  selector:
    matchLabels:
      app: akc
  replicas: 1
  template:
    metadata:
      labels:
        app: akc
    spec:
      containers:
      - name: akc
        image: bloopletech/akc@sha256:fc515c56754a49915d72798091d4c4f4571bd24755e1e9f9cda14419b94c773b
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "32Mi"
      imagePullSecrets:
      - name: regcred
