kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - akc-api.bloople.net
    - api.akc.link
    - akc.bloople.net
    - akc.link
    secretName: letsencrypt-prod
  rules:
  - host: akc-api.bloople.net
    http:
      paths:
      - backend:
          serviceName: akc-api
          servicePort: 80
  - host: api.akc.link
    http:
      paths:
      - backend:
          serviceName: akc-api
          servicePort: 80
  - host: akc.bloople.net
    http:
      paths:
      - backend:
          serviceName: akc
          servicePort: 80
  - host: akc.link
    http:
      paths:
      - backend:
          serviceName: akc
          servicePort: 80
